Update department DTO and entity to change contactPhone type from string to number, ensuring consistency across the application. Modify frontend to handle contactPhone as a number during API interactions. Update .env file for local development API URL.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-VUE_APP_API_URL=https://site-info-xi.vercel.app/api
+# VUE_APP_API_URL=https://site-info-xi.vercel.app/api
+VUE_APP_API_URL=http://localhost:2404/api
 NODE_ENV=development 
